# dig-rpc

./: Cargo.toml  README.md
docs/resources/: SPEC.md
src/: dispatch.rs  error.rs  lib.rs  method.rs  role.rs  server.rs  tls.rs
src/middleware/: audit.rs  mod.rs  rate_limit.rs  request_id.rs
tests/: dispatch.rs
